--- a/localisation/english/focustree_fra_l_english.yml
+++ b/localisation/english/focustree_fra_l_english.yml
@@ -233,6 +233,7 @@ FRA_the_cult_of_oil:0 "The Cult of Oil"
 FRA_the_cult_of_oil_desc:0 "Our lands on the continent and our overseas territories are simply replete with natural resources, including the oil we need so much, we just need to find it. Even the most nondescript desert can hide the key to industrial and military domination."
 FRA_naval_strategy:0 "Naval Strategy"
 FRA_naval_strategy_desc:0 "Our admirals have calculated what the government should pay attention to. In general, they want to convey to us that the improvement of the fleet should go both qualitatively and quantitatively. The talking is about expanding naval schools and optimising construction. Both are tempting, but it will take a long time."
-
 FRA_pacify_quebec:0 "Pacify Quebec"
 FRA_pacify_quebec_desc:0 "Quebec is our old colony, which betrayed us, but which we no longer claim. However, history has decreed that the unfortunate Quebec has become a victim of insane Jacobins who wave their fists at all civilized countries. Dealing with this threat will be another victory of reason over stupidity."
+FRA_question_of_pomerania:0 "Question of Pomerania"
+FRA_question_of_pomerania_desc:0 "After the Great War we defeated Polish Kingdom and created French Mandate of Pomerania to decide what to do with these territories. Now it's time for this decision."
