--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -982,14 +982,14 @@
  POL_communism:0 "Polish People's Republic"
  POL_communism_DEF:0 "the Polish People's Republic"
  POL_communism_ADJ:0 "Polish"
- POL_democratic:0 "Republic of Poland"
- POL_democratic_DEF:0 "the Republic of Poland"
+ POL_democratic:0 "Kingdom of Poland"
+ POL_democratic_DEF:0 "the Kingdom of Poland"
  POL_democratic_ADJ:0 "Polish"
  POL_neutrality:0 "Kingdom of Poland"
  POL_neutrality_DEF:0 "the Kingdom of Poland"
  POL_neutrality_ADJ:0 "Polish"
- POL_fascism:0 "Polish Empire"
- POL_fascism_DEF:0 "the Polish Empire"
+ POL_fascism:0 "Kingdom of Poland"
+ POL_fascism_DEF:0 "the Kingdom of Poland"
  POL_fascism_ADJ:0 "Polish"
  
  CZE_communism:0 "Czech Socialist Republic"
