--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -982,14 +982,14 @@
  POL_communism:0 "Польская Народная Республика"
  POL_communism_DEF:0 "Польская Народная Республика"
  POL_communism_ADJ:0 "Польск."
- POL_democratic:0 "Республика Польша"
- POL_democratic_DEF:0 "Республика Польша"
+ POL_democratic:0 "Королевство Польское"
+ POL_democratic_DEF:0 "Королевство Польское"
  POL_democratic_ADJ:0 "Польск."
  POL_neutrality:0 "Королевство Польское"
  POL_neutrality_DEF:0 "Королевство Польское"
  POL_neutrality_ADJ:0 "Польск."
- POL_fascism:0 "Польская империя"
- POL_fascism_DEF:0 "Польская империя"
+ POL_fascism:0 "Королевство Польское"
+ POL_fascism_DEF:0 "Королевство Польское"
  POL_fascism_ADJ:0 "Польск."
  
  CZE_communism:0 "Чешская Социалистическая Республика"
