--- a/localisation/english/replace/deluge_greece_content_l_english.yml
+++ b/localisation/english/replace/deluge_greece_content_l_english.yml
@@ -5,6 +5,15 @@
  deluge_greece.1.a:0 "Create Metaxist government under control of the king!"
  deluge_greece.1.b:0 "Create Metaxist government without control of the king!"
  deluge_greece.1.c:0 "Kill them all!"
+ deluge_greece.2.t:0 "Metaxist Government formed in [GRE.GetName]!"
+ deluge_greece.2.d:0 "After defeat in the Great War [GRE.GetName] became unstable republic where far-right movement of Metaxism grow in power. Ioannis Metaxas, it's leader, with many other members of this movement met king George II in Athens. After that event George II decided to create new government with Ioannis Metaxas as it's leader. King still has full power in the country however many policies are now created and decisions decided by metaxists. This will cause many purges of opposition, implementing revanchist policy and militarizing society. Many look at [GRE.GetName] as future reasons of wars."
+ deluge_greece.2.a:0 "What new direction will change?"
+ deluge_greece.3.t:0 "Metaxists take full power in [GRE.GetName]!"
+ deluge_greece.3.d:0 "After defeat in the Great War [GRE.GetName] became unstable republic where far-right movement of Metaxism grow in power. Ioannis Metaxas, it's leader, with many other members of this movement met king George II in Athens. After that event George II decided to create new government with Ioannis Metaxas as it's leader. King waived full power in the country which means that Ioannis Metaxas is supreme leader of [GRE.GetName]. Many policies are now created and decisions decided by metaxists. This will cause many purges of opposition, implementing revanchist policy and militarizing society. Many look at [GRE.GetName] as future reasons of wars."
+ deluge_greece.3.a:0 "What new direction will change?"
+ deluge_greece.4.t:0 "Metaxists bloody purged in [GRE.GetName]!"
+ deluge_greece.4.d:0 "After defeat in the Great War [GRE.GetName] became unstable republic where far-right movement of Metaxism grow in power. Ioannis Metaxas, it's leader, with many other members of this movement were recently arrested and excetued or murdered by king's forces in whole country. This bloody purge was noticed by other parties, foreign public and normal citizens. Followers of metaxist ideas organized manifestations across the country and communists organized counter-manifestations. Many of this protestors clashed and things became violent. Then police came and tried to calm down the crowds, but it ended with many more deaths because of police intervention. King George II said that soon situation will became stable again and police intervention prevented splitting the country in half."
+ deluge_greece.4.a:0 "Terrible!"
  ##ideas:
  GRE_metaxism_on_the_rise:0 "Metaxism on the Rise"
  GRE_metaxism_on_the_rise_desc:0 "After defeat in the Great War nationalist tendencies were growing in our country. Metaxist Movement is far-right movement created and led by Ioannis Metaxas."
