--- a/localisation/english/replace/deluge_poland_content_l_english.yml
+++ b/localisation/english/replace/deluge_poland_content_l_english.yml
@@ -1040,6 +1040,23 @@
  POL_deluge_tomasz_pilarski_desc:0 ""
  POL_Character_deluge_stanislaw_mikolajczyk:0 "Stanisław Mikołajczyk"
  POL_deluge_stanislaw_mikolajczyk_desc:0 ""
+ POL_Character_deluge_xawery_czernicki:0 "Xawery Czerniecki"
+ POL_deluge_xawery_czernicki_desc:0 ""
+ POL_Character_deluge_stanislaw_hryniewiecki:0 "Stanisław Hryniewiecki"
+ POL_deluge_stanislaw_hryniewiecki_desc:0 ""
+ POL_Character_deluge_stefan_frankowski:0 "Stefan Frankowski"
+ POL_deluge_stefan_frankowski_desc:0 ""
+ POL_Character_deluge_karol_korytowski:0 "Karol Korytowski"
+ POL_deluge_karol_korytowski_desc:0 ""
+ POL_Character_deluge_jozef_unrug:0 "Józef Unrug"
+ POL_deluge_jozef_unrug_desc:0 ""
+ POL_Character_deluge_adam_mohuczy:0 "Adam Mohuczy"
+ POL_deluge_adam_mohuczy_desc:0 ""
+ POL_Character_deluge_jerzy_swirski:0 "Jerzy Świrski"
+ POL_deluge_jerzy_swirski_desc:0 ""
+ POL_Character_deluge_wlodzimierz_steyer:0 "Włodzimierz Steyer"
+ POL_deluge_wlodzimierz_steyer_desc:0 ""
+ 
  ##################TRAITS##############################
  marshal_of_sky_and_soil:0 "Marshal of the Sky and the Soil"
  quarreling_politicians_and_generals:0 "Quarreling Politicians and Generals"
