--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -249,6 +249,112 @@
  NZL_UK_fascism_DEF:0 "the Dominion of New Zealand"
  NZL_UK_fascism_ADJ:0 "New Zealander"
  
+ ###POLAND###
+ 
+ POL_empire_communism:0 "Polish People's Republic"
+ POL_empire_communism_DEF:0 "the Polish People's Republic"
+ POL_empire_communism_ADJ:0 "Polish"
+ POL_empire_democratic:0 "Greater Polish Empire"
+ POL_empire_democratic_DEF:0 "the Greater Polish Empire"
+ POL_empire_democratic_ADJ:0 "Polish"
+ POL_empire_neutrality:0 "Greater Polish Empire"
+ POL_empire_neutrality_DEF:0 "the Greater Polish Empire"
+ POL_empire_neutrality_ADJ:0 "Polish"
+ POL_empire_fascism:0 "Greater Polish Empire"
+ POL_empire_fascism_DEF:0 "the Greater Polish Empire"
+ POL_empire_fascism_ADJ:0 "Polish"
+ 
+ POL_rzeczpospolita_communism:0 "Polish People's Republic"
+ POL_rzeczpospolita_communism_DEF:0 "the Polish People's Republic"
+ POL_rzeczpospolita_communism_ADJ:0 "Polish"
+ POL_rzeczpospolita_democratic:0 "Republic of Poland"
+ POL_rzeczpospolita_democratic_DEF:0 "the Republic of Poland"
+ POL_rzeczpospolita_democratic_ADJ:0 "Polish"
+ POL_rzeczpospolita_neutrality:0 "Republic of Poland"
+ POL_rzeczpospolita_neutrality_DEF:0 "the Republic of Poland"
+ POL_rzeczpospolita_neutrality_ADJ:0 "Polish"
+ POL_rzeczpospolita_fascism:0 "Republic of Poland"
+ POL_rzeczpospolita_fascism_DEF:0 "the Republic of Poland"
+ POL_rzeczpospolita_fascism_ADJ:0 "Polish"
+ 
+ POL_falanga_communism:0 "Polish Socialist Council Republic"
+ POL_falanga_communism_DEF:0 "the Polish Socialist Council Republic"
+ POL_falanga_communism_ADJ:0 "Polish"
+ POL_falanga_democratic:0 "Polish State"
+ POL_falanga_democratic_DEF:0 "the Polish State"
+ POL_falanga_democratic_ADJ:0 "Polish"
+ POL_falanga_neutrality:0 "Polish State"
+ POL_falanga_neutrality_DEF:0 "the Polish State"
+ POL_falanga_neutrality_ADJ:0 "Polish"
+ POL_falanga_fascism:0 "Polish State"
+ POL_falanga_fascism_DEF:0 "the Polish State"
+ POL_falanga_fascism_ADJ:0 "Polish"
+ 
+ POL_pagan_communism:0 "Polish Socialist Council Republic"
+ POL_pagan_communism_DEF:0 "the Polish Socialist Council Republic"
+ POL_pagan_communism_ADJ:0 "Polish"
+ POL_pagan_democratic:0 "Polish Slavic State"
+ POL_pagan_democratic_DEF:0 "the Polish Slavic State"
+ POL_pagan_democratic_ADJ:0 "Polish"
+ POL_pagan_neutrality:0 "Polish Slavic State"
+ POL_pagan_neutrality_DEF:0 "the Polish Slavic State"
+ POL_pagan_neutrality_ADJ:0 "Polish"
+ POL_pagan_fascism:0 "Polish Slavic State"
+ POL_pagan_fascism_DEF:0 "the Polish Slavic State"
+ POL_pagan_fascism_ADJ:0 "Polish"
+ 
+ POL_lechitic_communism:0 "Lechitic Union"
+ POL_lechitic_communism_DEF:0 "the Lechitic Union"
+ POL_lechitic_communism_ADJ:0 "Lechitic"
+ POL_lechitic_democratic:0 "Lechitic Republic"
+ POL_lechitic_democratic_DEF:0 "the Lechitic Republic"
+ POL_lechitic_democratic_ADJ:0 "Lechitic"
+ POL_lechitic_neutrality:0 "Lechitic Empire"
+ POL_lechitic_neutrality_DEF:0 "the Lechitic Empire"
+ POL_lechitic_neutrality_ADJ:0 "Lechitic"
+ POL_lechitic_fascism:0 "Lechitic Empire"
+ POL_lechitic_fascism_DEF:0 "the Lechitic Empire"
+ POL_lechitic_fascism_ADJ:0 "Lechitic"
+ 
+ POL_zapadoslavia_communism:0 "Socialist Federal Republic of Zapadoslavia"
+ POL_zapadoslavia_communism_DEF:0 "the Socialist Federal Republic of Zapadoslavia"
+ POL_zapadoslavia_communism_ADJ:0 "Zapadoslavian"
+ POL_zapadoslavia_democratic:0 "Federal Republic of Zapadoslavia"
+ POL_zapadoslavia_democratic_DEF:0 "the Federal Republic of Zapadoslavia"
+ POL_zapadoslavia_democratic_ADJ:0 "Zapadoslavian"
+ POL_zapadoslavia_neutrality:0 "Zapadoslavia"
+ POL_zapadoslavia_neutrality_DEF:0 "Zapadoslavia"
+ POL_zapadoslavia_neutrality_ADJ:0 "Zapadoslavian"
+ POL_zapadoslavia_fascism:0 "Zapadoslavia"
+ POL_zapadoslavia_fascism_DEF:0 "Zapadoslavia"
+ POL_zapadoslavia_fascism_ADJ:0 "Zapadoslavian"
+ 
+ POL_slavic_communism:0 "Union of Slavic States"
+ POL_slavic_communism_DEF:0 "the Union of Slavic States"
+ POL_slavic_communism_ADJ:0 "Slavic"
+ POL_slavic_democratic:0 "Slavic Federation"
+ POL_slavic_democratic_DEF:0 "the Slavic Federation"
+ POL_slavic_democratic_ADJ:0 "Slavic"
+ POL_slavic_neutrality:0 "Slavic Empire"
+ POL_slavic_neutrality_DEF:0 "the Slavic Empire"
+ POL_slavic_neutrality_ADJ:0 "Slavic"
+ POL_slavic_fascism:0 "Slavic Empire"
+ POL_slavic_fascism_DEF:0 "the Slavic Empire"
+ POL_slavic_fascism_ADJ:0 "Slavic"
+ 
+ PAL_papal_communism:0 "Jerusalem Republic"
+ PAL_papal_communism_DEF:0 "Jerusalem Republic"
+ PAL_papal_communism_ADJ:0 "Jerusalem"
+ PAL_papal_democratic:0 "Kingdom of Jerusalem"
+ PAL_papal_democratic_DEF:0 "Kingdom of Jerusalem"
+ PAL_papal_democratic_ADJ:0 "Jerusalem"
+ PAL_papal_neutrality:0 "Kingdom of Jerusalem"
+ PAL_papal_neutrality_DEF:0 "Kingdom of Jerusalem"
+ PAL_papal_neutrality_ADJ:0 "Jerusalem"
+ PAL_papal_fascism:0 "Kingdom of Jerusalem"
+ PAL_papal_fascism_DEF:0 "Kingdom of Jerusalem"
+ PAL_papal_fascism_ADJ:0 "Jerusalem"
+ 
  ###RUSSIA###
  
  FIN_RE_neutrality:0 "Grand Duchy of Finland"
