--- a/localisation/russian/countries_cosmetic_l_russian.yml
+++ b/localisation/russian/countries_cosmetic_l_russian.yml
@@ -249,6 +249,112 @@
  NZL_UK_fascism_DEF:0 "Доминион Новая Зеландия"
  NZL_UK_fascism_ADJ:0 "Ново-Зеландск."
  
+ ###ПОЛЬША###
+ 
+ POL_empire_communism:0 "Польская Народная Республика"
+ POL_empire_communism_DEF:0 "Польская Народная Республика"
+ POL_empire_communism_ADJ:0 "Польск."
+ POL_empire_democratic:0 "Великая Польская империя"
+ POL_empire_democratic_DEF:0 "Великая Польская империя"
+ POL_empire_democratic_ADJ:0 "Польск."
+ POL_empire_neutrality:0 "Великая Польская империя"
+ POL_empire_neutrality_DEF:0 "Великая Польская империя"
+ POL_empire_neutrality_ADJ:0 "Польск."
+ POL_empire_fascism:0 "Великая Польская империя"
+ POL_empire_fascism_DEF:0 "Великая Польская империя"
+ POL_empire_fascism_ADJ:0 "Польск."
+ 
+ POL_rzeczpospolita_communism:0 "Польская Народная Республика"
+ POL_rzeczpospolita_communism_DEF:0 "Польская Народная Республика"
+ POL_rzeczpospolita_communism_ADJ:0 "Польск."
+ POL_rzeczpospolita_democratic:0 "Польская Республика"
+ POL_rzeczpospolita_democratic_DEF:0 "Польская Республика"
+ POL_rzeczpospolita_democratic_ADJ:0 "Польск."
+ POL_rzeczpospolita_neutrality:0 "Польская Республика"
+ POL_rzeczpospolita_neutrality_DEF:0 "Польская Республика"
+ POL_rzeczpospolita_neutrality_ADJ:0 "Польск."
+ POL_rzeczpospolita_fascism:0 "Польская Республика"
+ POL_rzeczpospolita_fascism_DEF:0 "Польская Республика"
+ POL_rzeczpospolita_fascism_ADJ:0 "Польск."
+ 
+ POL_falanga_communism:0 "Польская Социалистическая Советская Республика"
+ POL_falanga_communism_DEF:0 "Польская Социалистическая Советская Республика"
+ POL_falanga_communism_ADJ:0 "Польск."
+ POL_falanga_democratic:0 "Польское государство"
+ POL_falanga_democratic_DEF:0 "Польское государство"
+ POL_falanga_democratic_ADJ:0 "Польск."
+ POL_falanga_neutrality:0 "Польское государство"
+ POL_falanga_neutrality_DEF:0 "Польское государство"
+ POL_falanga_neutrality_ADJ:0 "Польск."
+ POL_falanga_fascism:0 "Польское государство"
+ POL_falanga_fascism_DEF:0 "Польское государство"
+ POL_falanga_fascism_ADJ:0 "Польск."
+ 
+ POL_pagan_communism:0 "Польская Социалистическая Советская Республика"
+ POL_pagan_communism_DEF:0 "Польская Социалистическая Советская Республика"
+ POL_pagan_communism_ADJ:0 "Польск."
+ POL_pagan_democratic:0 "Польское славянское государство"
+ POL_pagan_democratic_DEF:0 "Польское славянское государство"
+ POL_pagan_democratic_ADJ:0 "Польск."
+ POL_pagan_neutrality:0 "Польское славянское государство"
+ POL_pagan_neutrality_DEF:0 "Польское славянское государство"
+ POL_pagan_neutrality_ADJ:0 "Польск."
+ POL_pagan_fascism:0 "Польское славянское государство"
+ POL_pagan_fascism_DEF:0 "Польское славянское государство"
+ POL_pagan_fascism_ADJ:0 "Польск."
+ 
+ POL_lechitic_communism:0 "Лехитский Союз"
+ POL_lechitic_communism_DEF:0 "Лехитский Союз"
+ POL_lechitic_communism_ADJ:0 "Лехитск."
+ POL_lechitic_democratic:0 "Лехитская Республикa"
+ POL_lechitic_democratic_DEF:0 "Лехитская Республикa"
+ POL_lechitic_democratic_ADJ:0 "Лехитск."
+ POL_lechitic_neutrality:0 "Лехитская империя"
+ POL_lechitic_neutrality_DEF:0 "Лехитская империя"
+ POL_lechitic_neutrality_ADJ:0 "Лехитск."
+ POL_lechitic_fascism:0 "Лехитская империя"
+ POL_lechitic_fascism_DEF:0 "Лехитская империя"
+ POL_lechitic_fascism_ADJ:0 "Лехитск."
+ 
+ POL_zapadoslavia_communism:0 "Социалистическая Федеративная Республика Западославия"
+ POL_zapadoslavia_communism_DEF:0 "Социалистическая Федеративная Республика Западославия"
+ POL_zapadoslavia_communism_ADJ:0 "Западославск."
+ POL_zapadoslavia_democratic:0 "Федеративная Республика Западославия"
+ POL_zapadoslavia_democratic_DEF:0 "Федеративная Республика Западославия"
+ POL_zapadoslavia_democratic_ADJ:0 "Западославск."
+ POL_zapadoslavia_neutrality:0 "Западославия"
+ POL_zapadoslavia_neutrality_DEF:0 "Западославия"
+ POL_zapadoslavia_neutrality_ADJ:0 "Западославск."
+ POL_zapadoslavia_fascism:0 "Западославия"
+ POL_zapadoslavia_fascism_DEF:0 "Западославия"
+ POL_zapadoslavia_fascism_ADJ:0 "Западославск."
+ 
+ POL_slavic_communism:0 "Союз славянских государств"
+ POL_slavic_communism_DEF:0 "Союз славянских государств"
+ POL_slavic_communism_ADJ:0 "Славянск."
+ POL_slavic_democratic:0 "Славянская Федерация"
+ POL_slavic_democratic_DEF:0 "Славянская Федерация"
+ POL_slavic_democratic_ADJ:0 "Славянск."
+ POL_slavic_neutrality:0 "Славянская империя"
+ POL_slavic_neutrality_DEF:0 "Славянская империя"
+ POL_slavic_neutrality_ADJ:0 "Славянск."
+ POL_slavic_fascism:0 "Славянская империя"
+ POL_slavic_fascism_DEF:0 "Славянская империя"
+ POL_slavic_fascism_ADJ:0 "Славянск."
+ 
+ PAL_papal_communism:0 "Иерусалимская Республика"
+ PAL_papal_communism_DEF:0 "Иерусалимская Республика"
+ PAL_papal_communism_ADJ:0 "Иерусалимск."
+ PAL_papal_democratic:0 "Иерусалимское королевство"
+ PAL_papal_democratic_DEF:0 "Иерусалимское королевство"
+ PAL_papal_democratic_ADJ:0 "Иерусалимск."
+ PAL_papal_neutrality:0 "Иерусалимское королевство"
+ PAL_papal_neutrality_DEF:0 "Иерусалимское королевство"
+ PAL_papal_neutrality_ADJ:0 "Иерусалимск."
+ PAL_papal_fascism:0 "Иерусалимское королевство"
+ PAL_papal_fascism_DEF:0 "Иерусалимское королевство"
+ PAL_papal_fascism_ADJ:0 "Иерусалимск."
+ 
  ###РОССИЯ###
  
  FIN_RE_neutrality:0 "Великое княжество Финляндское"
