--- a/localisation/russian/replace/deluge_diplomacy_replace_l_russian.yml
+++ b/localisation/russian/replace/deluge_diplomacy_replace_l_russian.yml
@@ -2,5 +2,5 @@
  DR_OFFENSIVE_WAR:0 "Идеологический центрист призвал к наступательной войне: "
  DIPLOMACY_DEM_NO_THREAT_JUSTIFYING_WAR:0 "Наша идеология не может оправдать военные цели против стран, которые не вызвали мировой напряженности."
  DR_IDEOLOGICAL_ACCEPTANCE:0 "§Y$US$§! скорее всего, примет $IDEOLOGY|Y$ предложение: "
- FE_HISTORICAL:0 "Дорога к войне"
- FE_HISTORICAL_TOOLTIP:0 "В режиме §HДорога к войне§! , Страны AI будут стремиться к более экстремальным решениям.\nСтраны будут с большей вероятностью объявлять войны через события, принимать запросы присоединиться к фракциям и искать casus belli в своих национальных фокусах."
+ FE_HISTORICAL:0 "«Потоп»"
+ FE_HISTORICAL_TOOLTIP:0 "В режиме §H«Потоп»§!, страны под управлением ИИ будут стремиться к более экстремальным решениям.\nСтраны будут с большей вероятностью объявлять войны через события, принимать запросы присоединиться к фракциям и искать casus belli в своих национальных фокусах."
