--- a/localisation/english/deluge_ideas_leaders_laws_advisors_l_english.yml
+++ b/localisation/english/deluge_ideas_leaders_laws_advisors_l_english.yml
@@ -75,8 +75,10 @@
  disinformation_expert_desc: "The Disinformation Expert uses fake radio transmissions, planted documents, inflatable planes and wooden tanks to obscure the movement and intent of friendly armies."
  emperor_napoleon: "Emperor of the French"
  emperor_napoleon_desc: "Napoléon IV ascended to the throne on May 15th 1926 after the death of his father, Eugène II. He has ruled conservatively without expanding his powers at the expense of the National Assembly, continuing the dynastic trend of enlightened despotism. Nonetheless, he is a very public figure and actively seeks to increase his popular support."
- bourbon_king: "Bourbon King"
- bourbon_king_desc: "When the House of Bourbon finally accepted the loss of the Fatherland to the Corsican upstart at the Treaty of Amiens, Louis XVI, King of France, became Louis I, King of Louisiana. Louis III, like his royal ancestors, is a strong and energetic ruler, determined to maintain what little remains of the Ancien Régime. He has done much to modernise the Louisianian armed forces."
+ bourbon_king: "Jean I of Bourbon"
+ bourbon_king_desc: "When the House of Bourbon finally accepted the loss of the Fatherland to the Corsican upstart at the Treaty of Amiens, Louis XVI, King of France, became Louis I, King of Louisiana. Jean I, like his royal ancestors, is a strong and energetic ruler, determined to maintain what little remains of the Ancien Régime. He has done much to modernise the Louisianian armed forces."
+ bourbon_king_2:0 "Henri I of Bourbon"
+ bourbon_king_2_desc:0 "When the House of Bourbon finally accepted the loss of the Fatherland to the Corsican upstart at the Treaty of Amiens, Louis XVI, King of France, became Louis I, King of Louisiana. Henri I, like his royal ancestors, is a strong and energetic ruler, determined to maintain what little remains of the Ancien Régime."
  fighting_king: "The Fighting King"
  fighting_king_desc: "Edward VIII ascended to the throne upon the death of his father, George V, on January 20th, 1936. He captured the popular imagination during the Great War as a daring Royal Flying Corps pilot, dogfighting the French over Calais. His diplomatic efforts to ease the humiliating peace conditions for the Commonwealth realms have done much to recuperate British loyalty to the Crown, shaken by George V's acceptance of the Treaty of Versailles."
  ottoman_emperor: "Sovereign of the Sublime House of Osman"
@@ -87,8 +89,12 @@
  emperor_sehzade_omer_faruk_desc:0 ""
  emperor_ahmed_nihad:0 "Ahmed IV Nihad"
  emperor_ahmed_nihad_desc:0 ""
- swedish_king: "King of the United Kingdom of Sweden, Denmark and Norway"
- swedish_king_desc: "Gustav V is descended paternally from the Bernadotte and Oldenburg dynasties, the union of which merged the kingdoms of Sweden and Denmark-Norway. His reign has been more peaceful than that of his predecessor, Oscar II, who lost the duchy of Schleswig-Holstein to the German king of Westphalia. Gustav V kept Sweden out of the Great War and on good terms with both the Continental System and their Anglo-Russian enemies."
+ swedish_king: "Gustaf V of Bernadotte"
+ swedish_king_desc: "Gustav V is descended paternally from the Bernadotte and Oldenburg dynasties. His reign has been more peaceful than that of his predecessor Oscar II. Gustav V kept Sweden out of the Great War and on good terms with both the Continental System and their Anglo-Russian enemies."
+ danish_king:0 "Chrystian X of Glücksburg"
+ danish_king_desc:0 ""
+ norwegian_king:0 "Haakon VII of Glücksburg"
+ norwegian_king_desc:0 ""
  duchess_luxembourg: "Grand Duchess"
  duchess_luxembourg_desc: "The House of Nassau-Weilburg was placed on the throne of Luxembourg during the peace negotiations surrounding the end of the Napoleonic Wars, as a French concession to British and Russian concerns over the size and industrial strength of the victorious French Empire. Marie-Adélaïde is not particularly popular as a monarch, performing her duties primarily as a French puppet rather than a unifier or representative of the people."
  american_king: "Hamiltonian King"
