--- a/localisation/english/replace/deluge_poland_focuses_l_english.yml
+++ b/localisation/english/replace/deluge_poland_focuses_l_english.yml
@@ -7,7 +7,7 @@
  
  POL_continue_with_sanation:0 "The Party of Power"
  POL_continue_with_sanation_desc:0 "The government has no nobler task than to continue the work of the First Marshal. There are people who are ready to inherit the great responsibility of healing society - to inherit Sanation."
- POL_smigly_wins:0 "Edward Rydz-Śmigły"
+ POL_smigly_wins:0 "§REdward Rydz-Śmigły§!"
  POL_smigly_wins_desc:0 "Rydz-Śmigły is an ideal candidate for the role of Marshal. This is a person with experience in both the army and aviation, who is not afraid to make difficult decisions. If we want not only to protect Poland, but also to restore it to its former greatness, then we need Edward."
  POL_purge_undersirables:0 "Undesirable Elements"
  POL_purge_undersirables_desc:0 "The issue of power has been resolved, but some do not understand it or refuse to understand it. These fools need to be taught a lesson. We will grab the leaders and the most vociferous members of defeatist parties, movements and clubs for the edification of others."
